--- a/TP2/informe/intro.tex
+++ b/TP2/informe/intro.tex
@@ -22,4 +22,11 @@ Se utilizarán como objetivos las siguientes universidades:
 \item Universidad de Sydney - Australia (www.sydney.edu.au) (IP: 129.78.5.11)
 \end{enumerate}
 
+\subsubsection{Instrucciones de Compilación}
+Para ejecutar el programa de monitoreo se debe ingresar el comando:\\ 
+
+\textit{     sudo python redes-tp2\_5.py ip}\\
+
+donde $ip$ es la $IP$ del host al que queremos realizar el $traceroute$.
+
 
